--- a/app/globals.css
+++ b/app/globals.css
@@ -322,6 +322,19 @@
   @apply hidden md:block;
 }
 
+/* Hide scrollbar for mobile image container */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
+}
+
 @media print {
   .no-print {
     display: none !important;
